# process-swimlanes-drawio

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
examples/: minimal.py  ngsm_v1_sponsor.py  ngsm_v2_deep_dive.py
src/process_swimlanes/: __init__.py  colors.py  drawio_emit.py  geometry.py
tests/: test_drawio_emit.py
